# rust_journey

./: Cargo.toml  README.md
benches/: sorting_benchmark.rs
builder_pattern/: Cargo.toml
builder_pattern/src/: lib.rs  main.rs
closures/src/: calculator.rs  dyn_vs_static_dispatch.rs  main.rs  trait_types.rs
closures/src/trait_types/: fn_mut_trait.rs  fn_once_trait.rs  fn_trait.rs
constant_fun/: Cargo.toml
constant_fun/src/: animals.rs  buf_concat.rs  customers.rs  five_numbers.rs  german_goodbye.rs  last_number.rs
idiomatic_rust/: Cargo.toml
idiomatic_rust/src/: lib.rs  main.rs
iterators/: Cargo.toml
iterators/src/: iter_diff.rs  ordered_arr.rs  self_impl.rs
s_t_i_l/: Cargo.toml
src/: binary_search.rs  combinators.rs  for_vs_iter.rs  guessing_game.rs  lib.rs  main.rs  pitfall_game.rs  ref.rs
src/closures/: calculator.rs  fn_mut_trait.rs  fn_trait.rs  main.rs
src/constant_fun/: buf_concat.rs  five_numbers.rs  german_goodbye.rs  last_number.rs  main.rs
src/iterators/: main.rs  ordered_arr.rs  self_impl.rs
src/s_t_i_l/: optimized.rs  unoptimized.rs
