[package]
name = "rust_journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dev-dependencies]
criterion = "*"

[workspace]
members = ["closures", "constant_fun", "iterators", "s_t_i_l", "idiomatic_rust"]

[[bench]]
name = "sorting_benchmark"
harness = false
